// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when rendering on match snapshot for OTP discount 1`] = `
<View
  style={
    Array [
      Object {
        "paddingTop": 16,
      },
      Object {
        "flex": 1,
      },
    ]
  }
  testID="discount-detail"
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
        },
        Object {
          "flex": 1,
        },
        Object {
          "flexWrap": "wrap",
        },
      ]
    }
  />
  <View
    style={
      Object {
        "height": 16,
      }
    }
  />
  <View
    style={
      Object {
        "height": 8,
      }
    }
  />
  <View
    testID="otp-code-component"
  >
    <Text
      accessibilityRole="header"
      accessible={true}
      color="bluegreyDark"
      font="TitilliumWeb"
      fontStyle={
        Object {
          "fontSize": 18,
          "lineHeight": 22,
        }
      }
      style={
        Array [
          Object {
            "fontSize": 18,
            "lineHeight": 22,
          },
          Object {
            "color": "#17324D",
            "fontFamily": "Titillium Web",
            "fontStyle": "normal",
            "fontWeight": "600",
          },
        ]
      }
      weight="SemiBold"
      weightColorFactory={[Function]}
    >
      Discount code
    </Text>
    <View
      accessibilityHint="By pressing the item you will copy the code"
      accessibilityRole="button"
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
          Object {
            "alignItems": "center",
            "justifyContent": "space-between",
          },
        ]
      }
    >
      <Text
        color="bluegreyDark"
        font="RobotoMono"
        style={
          Array [
            Object {
              "fontSize": 20,
            },
            undefined,
            Object {
              "color": "#17324D",
              "fontFamily": "Roboto Mono",
              "fontStyle": "normal",
              "fontWeight": "700",
            },
          ]
        }
        weight="Bold"
      >
        ••••••••••
      </Text>
      <RNSVGSvgView
        accessibilityElementsHidden={true}
        accessibilityLabel=""
        accessible={false}
        align="xMidYMid"
        bbHeight={24}
        bbWidth={24}
        color={4278219750}
        focusable={false}
        height={24}
        importantForAccessibility="no-hide-descendants"
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "color": "#0073E6",
            },
            Object {
              "flex": 0,
              "height": 24,
              "width": 24,
            },
          ]
        }
        tintColor={4278219750}
        vbHeight={24}
        vbWidth={24}
        width={24}
      >
        <RNSVGGroup>
          <RNSVGPath
            clipRule={0}
            d="M2.377 11.667A10.997 10.997 0 0 1 12.001 6c4.138 0 7.744 2.285 9.623 5.666a.686.686 0 0 1 0 .667A10.997 10.997 0 0 1 12 18a10.997 10.997 0 0 1-9.623-5.666.686.686 0 0 1 0-.667zM12.001 4A12.997 12.997 0 0 0 .629 10.696a2.686 2.686 0 0 0 0 2.609A12.997 12.997 0 0 0 12 20c4.894 0 9.155-2.705 11.372-6.696.45-.812.45-1.797 0-2.609A12.997 12.997 0 0 0 12.001 4zM15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0zm2 0a5 5 0 1 1-10 0 5 5 0 0 1 10 0z"
            fill={
              Array [
                2,
              ]
            }
            fillRule={0}
            propList={
              Array [
                "fill",
                "fillRule",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
  <View
    style={
      Object {
        "height": 16,
      }
    }
  />
  <Text
    accessibilityRole="header"
    accessible={true}
    color="bluegreyDark"
    font="TitilliumWeb"
    fontStyle={
      Object {
        "fontSize": 18,
        "lineHeight": 22,
      }
    }
    style={
      Array [
        Object {
          "fontSize": 18,
          "lineHeight": 22,
        },
        Object {
          "color": "#17324D",
          "fontFamily": "Titillium Web",
          "fontStyle": "normal",
          "fontWeight": "600",
        },
      ]
    }
    weight="SemiBold"
    weightColorFactory={[Function]}
  >
    Validity
  </Text>
  <Text
    color="bluegreyDark"
    font="TitilliumWeb"
    fontStyle={
      Object {
        "fontSize": 16,
        "lineHeight": 22,
      }
    }
    style={
      Array [
        Object {
          "fontSize": 16,
          "lineHeight": 22,
        },
        Object {
          "color": "#17324D",
          "fontFamily": "Titillium Web",
          "fontStyle": "normal",
          "fontWeight": "400",
        },
      ]
    }
    weight="Regular"
    weightColorFactory={[Function]}
  >
    07/02/2022 - 20/02/2022
  </Text>
  <View
    style={
      Object {
        "height": 16,
      }
    }
  />
</View>
`;

exports[`when rendering on match snapshot for bucket discount 1`] = `
<View
  style={
    Array [
      Object {
        "paddingTop": 16,
      },
      Object {
        "flex": 1,
      },
    ]
  }
  testID="discount-detail"
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
        },
        Object {
          "flex": 1,
        },
        Object {
          "flexWrap": "wrap",
        },
      ]
    }
  />
  <View
    style={
      Object {
        "height": 16,
      }
    }
  />
  <Text
    accessibilityRole="header"
    accessible={true}
    color="bluegreyDark"
    font="TitilliumWeb"
    fontStyle={
      Object {
        "fontSize": 18,
        "lineHeight": 22,
      }
    }
    style={
      Array [
        Object {
          "fontSize": 18,
          "lineHeight": 22,
        },
        Object {
          "color": "#17324D",
          "fontFamily": "Titillium Web",
          "fontStyle": "normal",
          "fontWeight": "600",
        },
      ]
    }
    weight="SemiBold"
    weightColorFactory={[Function]}
  >
    Validity
  </Text>
  <Text
    color="bluegreyDark"
    font="TitilliumWeb"
    fontStyle={
      Object {
        "fontSize": 16,
        "lineHeight": 22,
      }
    }
    style={
      Array [
        Object {
          "fontSize": 16,
          "lineHeight": 22,
        },
        Object {
          "color": "#17324D",
          "fontFamily": "Titillium Web",
          "fontStyle": "normal",
          "fontWeight": "400",
        },
      ]
    }
    weight="Regular"
    weightColorFactory={[Function]}
  >
    07/02/2022 - 20/02/2022
  </Text>
  <View
    style={
      Object {
        "height": 16,
      }
    }
  />
</View>
`;

exports[`when rendering on match snapshot for landing page discount 1`] = `
<View
  style={
    Array [
      Object {
        "paddingTop": 16,
      },
      Object {
        "flex": 1,
      },
    ]
  }
  testID="discount-detail"
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
        },
        Object {
          "flex": 1,
        },
        Object {
          "flexWrap": "wrap",
        },
      ]
    }
  />
  <View
    style={
      Object {
        "height": 16,
      }
    }
  />
  <Text
    accessibilityRole="header"
    accessible={true}
    color="bluegreyDark"
    font="TitilliumWeb"
    fontStyle={
      Object {
        "fontSize": 18,
        "lineHeight": 22,
      }
    }
    style={
      Array [
        Object {
          "fontSize": 18,
          "lineHeight": 22,
        },
        Object {
          "color": "#17324D",
          "fontFamily": "Titillium Web",
          "fontStyle": "normal",
          "fontWeight": "600",
        },
      ]
    }
    weight="SemiBold"
    weightColorFactory={[Function]}
  >
    Validity
  </Text>
  <Text
    color="bluegreyDark"
    font="TitilliumWeb"
    fontStyle={
      Object {
        "fontSize": 16,
        "lineHeight": 22,
      }
    }
    style={
      Array [
        Object {
          "fontSize": 16,
          "lineHeight": 22,
        },
        Object {
          "color": "#17324D",
          "fontFamily": "Titillium Web",
          "fontStyle": "normal",
          "fontWeight": "400",
        },
      ]
    }
    weight="Regular"
    weightColorFactory={[Function]}
  >
    07/02/2022 - 20/02/2022
  </Text>
  <View
    style={
      Object {
        "height": 16,
      }
    }
  />
</View>
`;

exports[`when rendering on match snapshot for static code 1`] = `
<View
  style={
    Array [
      Object {
        "paddingTop": 16,
      },
      Object {
        "flex": 1,
      },
    ]
  }
  testID="discount-detail"
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
        },
        Object {
          "flex": 1,
        },
        Object {
          "flexWrap": "wrap",
        },
      ]
    }
  />
  <View
    style={
      Object {
        "height": 16,
      }
    }
  />
  <View
    style={
      Object {
        "height": 8,
      }
    }
  />
  <Text
    accessibilityRole="header"
    accessible={true}
    color="bluegreyDark"
    font="TitilliumWeb"
    fontStyle={
      Object {
        "fontSize": 18,
        "lineHeight": 22,
      }
    }
    style={
      Array [
        Object {
          "fontSize": 18,
          "lineHeight": 22,
        },
        Object {
          "color": "#17324D",
          "fontFamily": "Titillium Web",
          "fontStyle": "normal",
          "fontWeight": "600",
        },
      ]
    }
    weight="SemiBold"
    weightColorFactory={[Function]}
  >
    Discount code
  </Text>
  <View
    accessibilityHint="By pressing the item you will copy the code"
    accessibilityRole="button"
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "flexDirection": "row",
        },
        Object {
          "alignItems": "center",
          "justifyContent": "space-between",
        },
      ]
    }
    testID="static-code-component"
  >
    <Text
      color="bluegreyDark"
      font="RobotoMono"
      style={
        Array [
          Object {
            "fontSize": 20,
          },
          undefined,
          Object {
            "color": "#17324D",
            "fontFamily": "Roboto Mono",
            "fontStyle": "normal",
            "fontWeight": "700",
          },
        ]
      }
      weight="Bold"
    >
      ••••••••••
    </Text>
    <RNSVGSvgView
      accessibilityElementsHidden={true}
      accessibilityLabel=""
      accessible={false}
      align="xMidYMid"
      bbHeight={24}
      bbWidth={24}
      color={4278219750}
      focusable={false}
      height={24}
      importantForAccessibility="no-hide-descendants"
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "color": "#0073E6",
          },
          Object {
            "flex": 0,
            "height": 24,
            "width": 24,
          },
        ]
      }
      tintColor={4278219750}
      vbHeight={24}
      vbWidth={24}
      width={24}
    >
      <RNSVGGroup>
        <RNSVGPath
          clipRule={0}
          d="M2.377 11.667A10.997 10.997 0 0 1 12.001 6c4.138 0 7.744 2.285 9.623 5.666a.686.686 0 0 1 0 .667A10.997 10.997 0 0 1 12 18a10.997 10.997 0 0 1-9.623-5.666.686.686 0 0 1 0-.667zM12.001 4A12.997 12.997 0 0 0 .629 10.696a2.686 2.686 0 0 0 0 2.609A12.997 12.997 0 0 0 12 20c4.894 0 9.155-2.705 11.372-6.696.45-.812.45-1.797 0-2.609A12.997 12.997 0 0 0 12.001 4zM15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0zm2 0a5 5 0 1 1-10 0 5 5 0 0 1 10 0z"
          fill={
            Array [
              2,
            ]
          }
          fillRule={0}
          propList={
            Array [
              "fill",
              "fillRule",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    style={
      Object {
        "height": 16,
      }
    }
  />
  <Text
    accessibilityRole="header"
    accessible={true}
    color="bluegreyDark"
    font="TitilliumWeb"
    fontStyle={
      Object {
        "fontSize": 18,
        "lineHeight": 22,
      }
    }
    style={
      Array [
        Object {
          "fontSize": 18,
          "lineHeight": 22,
        },
        Object {
          "color": "#17324D",
          "fontFamily": "Titillium Web",
          "fontStyle": "normal",
          "fontWeight": "600",
        },
      ]
    }
    weight="SemiBold"
    weightColorFactory={[Function]}
  >
    Validity
  </Text>
  <Text
    color="bluegreyDark"
    font="TitilliumWeb"
    fontStyle={
      Object {
        "fontSize": 16,
        "lineHeight": 22,
      }
    }
    style={
      Array [
        Object {
          "fontSize": 16,
          "lineHeight": 22,
        },
        Object {
          "color": "#17324D",
          "fontFamily": "Titillium Web",
          "fontStyle": "normal",
          "fontWeight": "400",
        },
      ]
    }
    weight="Regular"
    weightColorFactory={[Function]}
  >
    07/02/2022 - 20/02/2022
  </Text>
  <View
    style={
      Object {
        "height": 16,
      }
    }
  />
</View>
`;
